--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
     <form class="d-flex space-between" id="player-form" onsubmit="setPlayer(event)">
     <div>
         <label for="name">
-            <i class="fa fa-user-circle" 
-            aria-hidden="true"></i>
+            <i class="fa fa-user-circle" aria-hidden="true"></i>
             <span> Player Name:</span>
             </label>
-        <input type="text" name="playerName"
-        required>
+        <input type="text" name="playerName"required>
     </div>
     <button type="submit">Ok</button>
 </form>
@@ -40,8 +38,6 @@
     <div class="card bg-dark text-light">
         <div class="d-flex space-between">
             <div>
-
-                
                 <i class="fa fa-user-circle" aria-hidden="true"></i>
                 <span id="player-name "></span>
             </div>
@@ -69,11 +65,12 @@
             <span id="countdown">0</span>
         </div>
 
-        <div class=" game-container d-flex">
+        <div class="game-container d-flex">
             <div class="pump" onclick="inflate()">
                 <div class="handle"></div>
-                <div class="pump-box"></div>
+                <div class="pump-box">
                     <span id="click-count"></span>
+                </div>
             </div>
             <div id="balloon" class="balloon"></div>
             <audio id="pop-sound" src="burst.mp3"></audio>
